--- a/asset/pricing.css
+++ b/asset/pricing.css
@@ -236,6 +236,23 @@ footer {
   color: #264457;
 }
 
+.action {
+  text-align: center;
+  margin: 20px 0;
+  width: 100%;
+  padding: 0 20px;
+}
+
+.action > a {
+  display: inline-block;
+  padding: 8px 10px;
+  font-size: 15px;
+  border-radius: 10px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  opacity: 0.9;
+  border: 3px double #C60026;
+}
 
 
 @media only screen and (max-width: 1200px) { }
@@ -275,7 +292,7 @@ footer {
   .company > p {
     font-size: 12px;
   }
-    
+  
 }
 
 
