--- a/asset/pricing.css
+++ b/asset/pricing.css
@@ -3,9 +3,10 @@ html {
 }
 
 body {
-  background-image: linear-gradient(to right, #874a6d, #81517b, #775987, #6c6191, #5f6998, #53719e, #4778a1, #3c7fa2, #2f87a3, #288fa1, #2c969c, #3a9c95);
-  color: #EEEEEE;
+  background-image: linear-gradient(to right, #cb90b2, #bf93bb, #b397c1, #a59ac5, #989dc6, #8ea2c9, #86a6c9, #7faac8, #7ab1c8, #79b8c7, #7cbec3, #83c3be);
+  color: #353535;
   font-size: 17px;
+  font-weight: 500;
   letter-spacing: 0.05em;
   word-spacing: 0.1em;
   font-family: "Open Sans", sans-serif;
@@ -27,13 +28,23 @@ header > .menu {
   z-index: 7;
 }
 
+.hide-menu {
+  display: none;
+}
+
+.tag-line {
+  margin-bottom: 40px;
+}
+
 .tag-line > span {
   position: relative;
   top: 3px;
+  font-size: 22px;
+  line-height: 0.5em;
 }
 
 .menu-btn {
-  background-color: #ba6696;
+  background-color: #cc4191;
   padding: 9px 10px;
   border-radius: 5px;
   cursor: pointer;
@@ -43,13 +54,14 @@ header > .menu {
   color: white;
   text-transform: uppercase;
   font-weight: 600;
+  font-size: 20px;
 }
 
 .links {
   background-color: #FAF2F4;
   position: absolute;
   right: 0;
-  top: 46px;
+  top: 53px;
   border-radius: 5px;
   display: none;
   border: 1px solid #D1D1D1;
@@ -57,12 +69,11 @@ header > .menu {
 
 .links > a {
   display: block;
-  width: 400px;
-  color: black;
+  width: 500px;
   text-decoration: none;
-  padding: 15px 0 15px 50px;
+  padding: 20px 0 20px 80px;
   text-transform: uppercase;
-  font-size: 17px;
+  font-size: 20px;
   border-bottom: 1px solid #D1D1D1;
 }
 
@@ -70,6 +81,7 @@ header > .menu {
   position: relative;
   top: 4px;
   left: 15px;
+  color: #424242;
 }
 
 a.last-link {
@@ -77,10 +89,13 @@ a.last-link {
 }
 
 
-header > h4 {
+header > h3 {
   text-align: center;
   margin-top: 40px;
   text-transform: uppercase;
+  letter-spacing: 0.06em;
+  word-spacing: 0.2em;
+  line-height: 1.4em;
 }
 
 .company {
@@ -88,13 +103,13 @@ header > h4 {
 }
 
 .company > img {
-  width: 35px;
-  height: 35px;
+  width: 70px;
+  height: 70px;
   border-radius: 50%;
 }
 
 .company > p {
-  font-size: 14px;
+  font-size: 20px;
 }
 
 main {
@@ -109,19 +124,28 @@ p.process {
 }
 
 p.process > a {
-  color: #EEEEEE;
+  color: #353535;
   padding: 2px 7px 0 5px;
+  text-decoration: none;
+}
+
+p.process img {
+  width: 300px;
+}
+
+p.process SVG {
+  position: relative;
+  right: 5px;
 }
 
 a.order {
   background-color: #C60026;
   color: white;
-  padding: 13px 15px 15px 15px;
+  padding: 15px 17px 17px 17px;
   border-radius: 28px;
-  font-size: 17px;
+  font-size: 20px;
   text-decoration: none;
   font-family: "Roboto", sans-serif;
-  font-weight: 400;
 }
 
 .snip1517 {
@@ -151,7 +175,7 @@ a.order {
   position: relative;
   margin: 0 0 20px 0;
   padding: 0 20px;
-  font-size: 1.6em;
+  font-size: 1.8em;
   letter-spacing: 2px;
   font-weight: 700;
   color: #1565C0;
@@ -168,17 +192,54 @@ a.order {
   background-color: #BDBDBD;
 }
 
+.snip1517 .plan-cost {
+  padding: 0 20px;
+  margin: 0;
+}
+
+.plan-offer {
+  display: inline-block;
+  font-size: 14px;
+  color: white;
+  background-color: #3E7596;
+  padding: 5px 10px;
+  margin: 5px 0;
+  border-radius: 10px;
+  position: relative;
+  bottom: 3px;
+}
+
+.offer-ends {
+  font-weight: bold;
+}
+
+.snip1517 .plan-price {
+  font-weight: 500;
+  font-size: 1.7em;
+  margin: 10px 0 0 0;
+  display: inline-block;
+  color: #424242;
+}
+
+.snip1517 .nego {
+  background-color: #FF8F00;
+  color: white;
+  border-radius: 7px;
+  padding: 0 7px 2px 7px;
+  font-size: 13px;
+  font-weight: 600;
+}
+
 .snip1517 .plan-features {
   padding: 0 0 20px;
-  margin: 0;
+  margin: 20px 0 0 0;
   list-style: outside none none;
-  font-size: 15px;
+  font-size: 16px;
 }
 
 .snip1517 .plan-features li {
   padding: 10px 20px;
   position: relative;
-  display: flex;
 }
 
 .snip1517 .plan-features li:before {
@@ -187,14 +248,25 @@ a.order {
   font-size: 20px;
   margin-right: 10px;
   position: relative;
-  bottom: 3px;
+  top: 2px;
+}
+
+li.plus:after {
+  content: "+";
+  color: #FF8F00;
+  font-size: 22px;
+  margin-left: 5px;
+  position: absolute;
+  top: 8px;
 }
 
 footer {
   text-align: center;
   color: white;
-  background-color: rgba(0.98, 0.95, 0.96, 0.4);
+  background-color: rgba(0.98, 0.95, 0.96, 0.5);
   border-radius: 10px 10px 0 0;
+  width: 70%;
+  margin: auto;
 }
 
 .footer-image {
@@ -202,24 +274,24 @@ footer {
 }
 
 .footer-info {
-  font-size: 3.3vw;
+  font-size: 2.7vw;
   padding: 20px;
 }
 
 .footer-icon {
-  width: 15vw;
+  width: 10vw;
 }
 
 .footer-link {
   color: white;
   display: inline-block;
-  font-size: 3vw;
+  font-size: 2.5vw;
 }
 
 .copyright {
   display: inline-block;
   margin: 5px 0;
-  font-size: 2.5vw;
+  font-size: 2.2vw;
   font-style: italic;
 }
 
@@ -229,8 +301,8 @@ footer {
 
 .for-who {
   font-style: italic;
-  font-size: 16px;
-  padding: 10px 30px 5px 30px;
+  font-size: 18px;
+  padding: 10px 20px;
   font-family: Roboto;
   font-weight: 500;
   color: #264457;
@@ -255,10 +327,28 @@ footer {
 }
 
 
+
 @media only screen and (max-width: 1200px) { }
 
 
-@media only screen and (max-width: 992px) { }
+@media only screen and (max-width: 992px) {
+  
+  .company > p {
+    font-size: 18px;
+  }
+  
+  .company > img {
+    width: 60px;
+    height: 60px;
+  }
+  
+  .links > a {
+    font-size: 18px;
+    width: 400px;
+    padding: 18px 0 18px 65px;
+  }
+  
+}
 
 
 @media only screen and (max-width: 768px) {
@@ -266,14 +356,18 @@ footer {
     font-size: 15px;
   }
   
+  .tag-line > span {
+    font-size: 20px;
+  }
+  
   header {
     width: 100%;
   }
   
   a.order {
-    padding: 10px 12px 12px 12px;
+    padding: 12px 14px 14px 14px;
     border-radius: 25px;
-    font-size: 15px;
+    font-size: 18px;
   }
   
   .menu-btn > span {
@@ -284,22 +378,57 @@ footer {
     right: 10px;
   }
   
-  .links > a {
-    font-size: 15px;
-    width: 350px;
+  footer {
+    width: 100%;
   }
   
-  .company > p {
-    font-size: 12px;
+  .footer-info {
+    font-size: 3.7vw;
   }
   
+  .footer-icon {
+    width: 15vw;
+  }
+  
+  .footer-link {
+    font-size: 3.4vw;
+  }
+  
+  .copyright {
+    font-size: 3vw;
+  }
+  
+  p.process img {
+    width: 250px;
+  }
+
 }
 
 
 @media only screen and (max-width: 576px) {
   
-  header > h4 {
-    font-size: 18px;
+  header > h3 {
+    word-spacing: 0.15em;
+    letter-spacing: 0.05em;
+  }
+  
+  .tag-line {
+    letter-spacing: 0.03em;
+  }
+  
+  .company > p {
+    font-size: 16px;
+  }
+  
+  .company > img {
+    width: 50px;
+    height: 50px;
+  }
+  
+  .links > a {
+    font-size: 16px;
+    width: 350px;
+    padding: 16px 0 16px 50px;
   }
   
 }
@@ -308,8 +437,15 @@ footer {
 @media only screen and (max-width: 374px) {
   .links > a {
     width: 300px;
+    padding: 14px 0 14px 20px;
   }
+  
+  .link-text {
+    left: 10px;
+  }
+  
 }
+
 
 
 
