--- a/asset/process.css
+++ b/asset/process.css
@@ -3,9 +3,10 @@ html {
 }
 
 body {
-  background-image: linear-gradient(to right, #874a6d, #81517b, #775987, #6c6191, #5f6998, #53719e, #4778a1, #3c7fa2, #2f87a3, #288fa1, #2c969c, #3a9c95);
-  color: #EEEEEE;
+  background-image: linear-gradient(to right, #cb90b2, #bf93bb, #b397c1, #a59ac5, #989dc6, #8ea2c9, #86a6c9, #7faac8, #7ab1c8, #79b8c7, #7cbec3, #83c3be);
+  color: #353535;
   font-size: 17px;
+  font-weight: 500;
   letter-spacing: 0.05em;
   word-spacing: 0.1em;
   font-family: "Open Sans", sans-serif;
@@ -27,13 +28,23 @@ header > .menu {
   z-index: 7;
 }
 
+.hide-menu {
+  display: none;
+}
+
+.tag-line {
+  margin-bottom: 40px;
+}
+
 .tag-line > span {
   position: relative;
   top: 3px;
+  font-size: 22px;
+  line-height: 0.5em;
 }
 
 .menu-btn {
-  background-color: #ba6696;
+  background-color: #cc4191;
   padding: 9px 10px;
   border-radius: 5px;
   cursor: pointer;
@@ -43,13 +54,14 @@ header > .menu {
   color: white;
   text-transform: uppercase;
   font-weight: 600;
+  font-size: 20px;
 }
 
 .links {
   background-color: #FAF2F4;
   position: absolute;
   right: 0;
-  top: 46px;
+  top: 53px;
   border-radius: 5px;
   display: none;
   border: 1px solid #D1D1D1;
@@ -57,12 +69,11 @@ header > .menu {
 
 .links > a {
   display: block;
-  width: 400px;
-  color: black;
+  width: 500px;
   text-decoration: none;
-  padding: 15px 0 15px 50px;
+  padding: 20px 0 20px 80px;
   text-transform: uppercase;
-  font-size: 17px;
+  font-size: 20px;
   border-bottom: 1px solid #D1D1D1;
 }
 
@@ -70,17 +81,20 @@ header > .menu {
   position: relative;
   top: 4px;
   left: 15px;
+  color: #424242;
 }
 
 a.last-link {
   border-bottom: none;
 }
 
-
-header > h4 {
+header > h3 {
   text-align: center;
   margin-top: 40px;
   text-transform: uppercase;
+  letter-spacing: 0.06em;
+  word-spacing: 0.2em;
+  line-height: 1.4em;
 }
 
 .company {
@@ -88,13 +102,13 @@ header > h4 {
 }
 
 .company > img {
-  width: 35px;
-  height: 35px;
+  width: 70px;
+  height: 70px;
   border-radius: 50%;
 }
 
 .company > p {
-  font-size: 14px;
+  font-size: 20px;
 }
 
 main {
@@ -104,10 +118,10 @@ main {
 }
 
 .process-bar {
-  background-color: rgba(0.98, 0.95, 0.96, 0.3);
+  background-color: rgba(0.98, 0.95, 0.96, 0.4);
   width: 70%;
   margin: auto;
-  margin-top: 50px;
+  margin-top: 10px;
   border-radius: 10px;
   position: sticky;
   top: 20px;
@@ -119,6 +133,7 @@ main {
   text-transform: uppercase;
   color: white;
   padding: 10px 0;
+  font-size: 18px;
 }
 
 .inactive-process-btn {
@@ -160,8 +175,10 @@ img.infographic {
 footer {
   text-align: center;
   color: white;
-  background-color: rgba(0.98, 0.95, 0.96, 0.4);
+  background-color: rgba(0.98, 0.95, 0.96, 0.5);
   border-radius: 10px 10px 0 0;
+  width: 70%;
+  margin: auto;
 }
 
 .footer-image {
@@ -169,24 +186,24 @@ footer {
 }
 
 .footer-info {
-  font-size: 3.3vw;
+  font-size: 2.7vw;
   padding: 20px;
 }
 
 .footer-icon {
-  width: 15vw;
+  width: 10vw;
 }
 
 .footer-link {
   color: white;
   display: inline-block;
-  font-size: 3vw;
+  font-size: 2.5vw;
 }
 
 .copyright {
   display: inline-block;
   margin: 5px 0;
-  font-size: 2.5vw;
+  font-size: 2.2vw;
   font-style: italic;
 }
 
@@ -218,6 +235,22 @@ footer {
   .graphic-section {
     width: 55%;
   }
+  
+  .links > a {
+    font-size: 18px;
+    width: 400px;
+    padding: 18px 0 18px 65px;
+  }  
+  
+  .company > img {
+    width: 60px;
+    height: 60px;
+  }
+  
+  .company > p {
+    font-size: 18px;
+  }  
+  
 }
 
 
@@ -239,6 +272,10 @@ footer {
     width: 100%;
   }
   
+  .process-btn {
+    font-size: 16px;
+  }
+  
   .present-section {
     width: 80%;
   }
@@ -251,24 +288,35 @@ footer {
     right: 10px;
   }
   
-  .links > a {
-    font-size: 15px;
-    width: 350px;
+  .tag-line > span {
+    font-size: 20px;
+  }  
+  
+  footer {
+    width: 100%;
   }
   
-  .company > p {
-    font-size: 12px;
+  .footer-info {
+    font-size: 3.7vw;
   }
   
+  .footer-icon {
+    width: 15vw;
+  }
+  
+  .footer-link {
+    font-size: 3.4vw;
+  }
+  
+  .copyright {
+    font-size: 3vw;
+  }  
+
 }
 
 
 @media only screen and (max-width: 576px) {
-  
-  header > h4 {
-    font-size: 18px;
-  }
-  
+ 
   .present-section {
     width: 100%;
   }
@@ -276,12 +324,43 @@ footer {
   .graphic-section {
     width: 90%;
   }
+  
+  .links > a {
+    font-size: 16px;
+    width: 350px;
+    padding: 16px 0 16px 50px;
+  }  
+  
+  .company > img {
+    width: 50px;
+    height: 50px;
+  }
+  
+  .company > p {
+    font-size: 16px;
+  }
+  
+  header > h3 {
+    word-spacing: 0.15em;
+    letter-spacing: 0.05em;
+  } 
+  
+  .tag-line {
+    letter-spacing: 0.04em;
+  }  
+  
 }
 
 
 @media only screen and (max-width: 374px) {
   .links > a {
     width: 300px;
+    padding: 14px 0 14px 20px;
   }
+  
+  .link-text {
+    left: 10px;
+  }
+  
 }
 
