--- a/asset/index.css
+++ b/asset/index.css
@@ -96,7 +96,7 @@ a.last-link {
 
 .pattern-back {
   width: 70%;
-  background-image: url("images/pattern-back.jpg");
+  background-image: url("images/pattern-back.webp");
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 20px;
