--- a/asset/pricing.css
+++ b/asset/pricing.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  background-image: linear-gradient(to right, #cb90b2, #bf93bb, #b397c1, #a59ac5, #989dc6, #8ea2c9, #86a6c9, #7faac8, #7ab1c8, #79b8c7, #7cbec3, #83c3be);
+  background-image: linear-gradient(to top, #86fbf4, #79f1ff, #8fe4ff, #b5d3ff, #d9c1ff, #deb8f8, #e4aff0, #eaa5e6, #d7a3ee, #bfa3f5, #a2a3fa, #7fa4fd);
   color: #353535;
   font-size: 17px;
   font-weight: 500;
