--- a/asset/process.css
+++ b/asset/process.css
@@ -44,7 +44,7 @@ header > .menu {
 }
 
 .menu-btn {
-  background-color: #cc4191;
+  background-color: #ba275d;
   padding: 9px 10px;
   border-radius: 5px;
   cursor: pointer;
