--- a/asset/process.css
+++ b/asset/process.css
@@ -388,6 +388,11 @@ footer {
     color: white;
   }
   
+  .inactive-process-btn {
+    background-color: #691433;
+    color: white;
+  }
+  
 }
 
 
