--- a/asset/index.css
+++ b/asset/index.css
@@ -117,7 +117,7 @@ p.tailored {
   background-color: white;
   display: inline-block;
   border-radius: 10px;
-  padding: 10px 0;
+  padding: 10px 50px;
 }
 
 span.service {
@@ -565,6 +565,11 @@ a.order {
   .copyright {
     font-size: 3vw;
   }
+  
+  p.tailored {
+    padding: 10px 20px;
+  }
+
   
 }
 
