--- a/asset/pricing.css
+++ b/asset/pricing.css
@@ -234,6 +234,10 @@ a.order {
   padding: 0 0 20px;
   margin: 20px 0 0 0;
   list-style: outside none none;
+  font-size: 15px;
+}
+
+.snip1517 .plan-features b {
   font-size: 16px;
 }
 
