--- a/asset/index.css
+++ b/asset/index.css
@@ -33,6 +33,16 @@ header > .menu {
   z-index: 7;
 }
 
+.floating-visit {
+   text-align: center;
+   margin: 0;
+   padding: 0 30px;
+}
+
+a.floating-link {
+  color: #ba275d !important;
+}
+
 .tag-line > span {
   display: inline-block;
   color: #FFF8E1;
@@ -56,7 +66,7 @@ span.just {
   cursor: pointer;
 }
 
-.menu-btn > span {
+.menu-text {
   color: white;
   text-transform: uppercase;
   font-weight: 600;
@@ -101,7 +111,7 @@ a.last-link {
   background-size: cover;
   border-radius: 20px;
   padding: 20px;
-  margin: 30px auto 50px auto;
+  margin: 0 auto 50px auto;
 }
 
 .pattern-back > h3 {
@@ -506,6 +516,10 @@ a.order {
     font-size: 15px;
   }
   
+  .floating-visit {
+    margin-top: 10px;
+  }
+  
   section {
     width: 90%;
   }
@@ -530,7 +544,7 @@ a.order {
     width: 100%;
   }
   
-  .menu-btn > span {
+  .menu-text {
     display: none;
   }
   
@@ -707,6 +721,10 @@ a.order {
   
   .link-text {
     color: white;
+  }
+  
+  a.floating-link {
+    color: #ff7aab !important;
   }
   
   .pattern-back {
