--- a/asset/pricing.css
+++ b/asset/pricing.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  background-image: linear-gradient(to top, #91fffa, #82f4ff, #92e5ff, #b4d3ff, #d7bfff, #deb8fa, #e5b1f3, #ecaaeb, #dbb0f5, #c8b5fb, #b5baff, #a3bfff);
+  background-color: #c4d3ff;
   color: #353535;
   font-size: 17px;
   font-weight: 500;
@@ -41,6 +41,10 @@ header > .menu {
   top: 3px;
   font-size: 22px;
   line-height: 0.5em;
+}
+
+.tag-line > svg {
+  fill: #00b02f;
 }
 
 .menu-btn {
@@ -234,11 +238,11 @@ a.order {
   padding: 0 0 20px;
   margin: 20px 0 0 0;
   list-style: outside none none;
-  font-size: 15px;
+  font-size: 14px;
 }
 
 .snip1517 .plan-features b {
-  font-size: 16px;
+  font-size: 15px;
 }
 
 .snip1517 .plan-features li {
@@ -446,7 +450,7 @@ footer {
 
 @media (prefers-color-scheme: dark) {
   body {
-    background-image: linear-gradient(to top, #004a45, #004351, #003a58, #0e2e57, #331e49, #381742, #3c0e3b, #3f0332, #38073a, #2e0d41, #1f1248, #01174d);
+    background-color: #12203d;
     color: #ffffff;
   }
   
@@ -461,6 +465,10 @@ footer {
   
   img {
     filter: grayscale(0.4) !important;
+  }
+  
+  .tag-line > svg {
+    fill: #7df252;
   }
   
   .links {
