--- a/asset/index.css
+++ b/asset/index.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-  background-image: linear-gradient(to top, #91fffa, #82f4ff, #92e5ff, #b4d3ff, #d7bfff, #deb8fa, #e5b1f3, #ecaaeb, #dbb0f5, #c8b5fb, #b5baff, #a3bfff);
+  background-color: #c4d3ff;
   color: #353535;
   font-size: 17px;
   font-weight: 500;
@@ -17,10 +17,29 @@ body {
   min-height: 100vh;
 }
 
+div.header-cont {
+  position: relative;
+  padding: 10px;
+}
+
 header {
   width: 80%;
   margin: auto;
-  padding: 10px;
+  color: #ffffff;
+}
+
+header:before {
+  width: 100%;
+  height: 100%;
+  background-color: #3e60ad;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -1;
+  content: '';
+  border-bottom-right-radius: 400px;
+  border-top-right-radius: 150px;
 }
 
 .hide-menu {
@@ -36,11 +55,12 @@ header > .menu {
 .floating-visit {
    text-align: center;
    margin: 0;
+   margin-bottom: 8px;
    padding: 0 30px;
 }
 
 a.floating-link {
-  color: #ba275d !important;
+  color: #ffbdd5 !important;
 }
 
 .tag-line > span {
@@ -111,7 +131,7 @@ a.last-link {
   background-size: cover;
   border-radius: 20px;
   padding: 20px;
-  margin: 0 auto 50px auto;
+  margin: 0 auto 100px auto;
 }
 
 .pattern-back > h3 {
@@ -198,7 +218,7 @@ a.action-order {
 }
 
 main {
-  margin-top: 50px;
+  margin-top: 80px;
   margin-bottom: 100px;
   flex: 1;
 }
@@ -262,7 +282,7 @@ div.process > a {
 
 div.process img {
   width: 120px;
-  filter: contrast(1.5);
+  filter: contrast(2);
 }
 
 
@@ -516,6 +536,10 @@ a.order {
     font-size: 15px;
   }
   
+  header:before {
+    border-top-right-radius: 0;
+  }
+  
   .floating-visit {
     margin-top: 10px;
   }
@@ -698,8 +722,12 @@ a.order {
 
 @media (prefers-color-scheme: dark) {
   body {
-    background-image: linear-gradient(to top, #004a45, #004351, #003a58, #0e2e57, #331e49, #381742, #3c0e3b, #3f0332, #38073a, #2e0d41, #1f1248, #01174d);
+    background-color: #12203d;
     color: #ffffff;
+  }
+  
+  header:before {
+    background-color: #2d447a;
   }
   
   a {
@@ -724,7 +752,7 @@ a.order {
   }
   
   a.floating-link {
-    color: #ff7aab !important;
+    color: #fa98bc !important;
   }
   
   .pattern-back {
