--- a/asset/index.css
+++ b/asset/index.css
@@ -65,11 +65,14 @@ a.floating-link {
 
 .tag-line > span {
   display: inline-block;
-  color: #FFF8E1;
-  background-color: rgba(0.98, 0.95, 0.96, 0.7);
+  color: #353535;
+  background-color: RGBA(230, 234, 245, 0.7);
   border-radius: 10px;
   padding: 5px 13px;
-  border: 3px double #F3DFA4;
+}
+
+.tag-line svg {
+  fill: #00b02f;
 }
 
 span.just {
@@ -138,13 +141,13 @@ a.last-link {
   text-align: center;
   text-transform: uppercase;
   font-family: "Merienda", cursive;
-  color: #ba275d;
+  color: #cf1b5d;
   font-weight: bold;
 }
 
 p.tailored {
   margin-bottom: 10px;
-  background-color: white;
+  background-color: RGBA(230, 234, 245, 0.7);
   display: inline-block;
   border-radius: 10px;
   padding: 10px 50px;
@@ -173,7 +176,7 @@ span.service {
 img.tag {
   height: 280px;
   max-width: 100%;
-  margin-top: 10px;
+  margin: 20px 0;
   animation: shake 5s ease-in-out infinite;
 }
 
@@ -759,13 +762,22 @@ a.order {
     background-image: url("images/pattern-back-dark.webp");
   }
   
-  .pattern-back > h3 {
-    color: #ff5291;
+  p.tailored {
+    background-color: RGBA(12, 19, 33, 0.8);
+    color: #ff87b3;
   }
   
-  p.tailored {
-    background-color: black;
-    color: #ff8cb6;
+  span.service {
+    background-color: #1a1a1a;
+  }
+  
+  .tag-line > span {
+    background-color: RGBA(12, 19, 33, 0.8);
+    color: #d5d9e0;
+  }
+  
+  .tag-line svg {
+    fill: #22bd4b;
   }
   
   a.action-order, a.order {
